fixed bottom scrollbar and added custom scrollbar

--- a/main.css
+++ b/main.css
@@ -6,13 +6,12 @@
 /* defaults */
 
 html, body {
-    width: 99.802936553399%;
     font-family: 'Lexend Deca', sans-serif;
     font-size: 16px;
     color: rgb(255, 255, 255);
     background-color: rgb(17, 17, 21);
   }
-
+  
 div {
   padding-top: 8px;
   padding-bottom: 8px;
@@ -174,4 +173,19 @@ a:hover {
     font-size: 24pt;
     color: rgb(255, 255, 255);
     transition: 0.5s;
+  }
+
+/* scrollbar */
+  ::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-image: linear-gradient(180deg, #33fa6f 0%, #5643ff 99%);
+    box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+    border-radius: 100px;
   }
